# sopaca

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  Procfile  README.rst  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yaml
.github/workflows/: ci.yaml  new_contributor_pr.yaml
docs/: .nojekyll  README.rst  conf.py  contributing.rst  deployment.rst  index.rst  license.rst  requirements.txt  spelling_wordlist.txt
sopaca/: asgi.py  settings.py  urls.py  wsgi.py
sopaca/consumption_import/: consumption_import.py
sopaca/consumption_import/parsers/: __init__.py  vattenfall.py
sopaca/dashapps/: test.py
sopaca/settings/: base.py  dev.py  heroku.py  prod.py
sopaca/tests/consumption_import/: __init__.py  test_consumption_import.py
sopaca/tests/consumption_import/consumptions/: .editorconfig  vattenfall.csv  vattenfall.csv.license  vattenfall.csv.txt
sopaca/views/: home.py
templates/: base.html  home.html  navbar.html
