# SPDX-FileCopyrightText: 2022 Kari Argillander
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile
[tool.isort]
profile = "black"
